Deployment/orders/webapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-webapi
  namespace: commerceflow
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: orders.commerceflow
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-webapi
                port:
                  number: 80
